main section fixed, nav bar and portfolio still need work

--- a/contact.html
+++ b/contact.html
@@ -3,28 +3,39 @@
 
 <head>
      <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title> Contact </title>
      <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
+<nav>
+    <div>
+    <header id="myname"> Lesly Sánchez </header>
+    </div>
+
+    <div class="navbar">
+      <li class="navlinks"><a href="#"> About me </a></li>
+      <li class="navlinks"><a href="#"> Portfolio </a></li>
+      <li class="navlinks"><a href="#"> Contact </a></li>
+    </div>
+</nav>
+
+     <hr width 10px>
+ 
+    <section class="mainsection">
     <h1> Contact </h1>
-
-    <hr>
-
     <form action="/action_page.php"> 
         Name: <br>
         <input type="text" name="name"><br>
         E-mail: <br>
         <input type="email" name="e-mail"><br>
         Message: <br>
-        <input type="text" name= "message"><br>
+        <input type="text" name= "message" class="message"><br>
         <br>
-        <input type="submit" name="submit">
+        <input type="submit" name="submit" width="40px">
     </form>
+    </section>
 
 </body>
 
