--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,27 @@
 <head>
         <meta charset="UTF-8">
         <title> Portfolio </title>
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+<nav>
+    <div>
+    <header id="myname"> Lesly Sánchez </header>
+    </div>
+
+    <div class="navbar">
+      <li class="navlinks"><a href="#"> About me </a></li>
+      <li class="navlinks"><a href="#"> Portfolio </a></li>
+      <li class="navlinks"><a href="#"> Contact </a></li>
+    </div>
+</nav>
+
+    <hr width 10px>
+     
+    <section class="mainsection">
     <h1> Portfolio </h1>
-    <hr>
-    
+
     <div>
     <img src="assets/images/placeholderimg1.jpg" height= 150px/>
     <p> Hangman </p>
@@ -34,6 +49,7 @@
     <img src="assets/images/placeholderimg5.jpg" height= 150px/>
     <p> Rock Paper Scissors</p>
     </div>
+    </section>
 
 </body>
 
